Putting a higher number of squares on the board crashes the page and therefore validated the input

--- a/style.css
+++ b/style.css
@@ -4,4 +4,4 @@
     display: grid;
 }
 
-/* 
+/* Putting a higher number of squares on the board crashes the page and therefore validated the input"
