--- a/style.css
+++ b/style.css
@@ -4,4 +4,5 @@
     display: grid;
 }
 
-/* Putting a higher number of squares on the board crashes the page and therefore validated the input"
+/* 
+/* Added functionality to the Black button to allow change of color
