--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .board {
+    display: grid;
     width: 500px;
     height: 500px;
-    display: grid;
+    background-color: white;
+    box-shadow: inset 0 3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
-
-/* Put an error message that requires range between 2 and 100
