Styled the buttons and put an erasor button

--- a/style.css
+++ b/style.css
@@ -30,3 +30,33 @@
     max-width: 600px;
     max-height: 600px;
 }
+
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+.buttons {
+    margin-top: 10px;
+    margin-bottom: 10px
+}
+
+button {
+    padding: 0.3em 1.2em;
+    margin: 0, 0.3em 0.3em 0;
+    border-radius: 2em;
+    text-decoration: none;
+    font-weight: 600;
+    text-align: center;
+    transition: all 0.2s;
+}
+
+button {
+    padding: 0.3em 1.2em;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 2em;
+    text-decoration: none;
+    font-weight: 600;
+    text-align: center;
+    transition: all 0.2s;
+}
